# PrintReportDemo

./: .gitignore  CMakeLists.txt  Main.qml  backendhelper.h  main.cpp  orderdetailmodel.cpp  orderdetailmodel.h  ordermodel.cpp  ordermodel.h  printhandler.cpp  printhandler.h
